1998-02-26  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-stock.c (build_disabled_pixmap): The style that provides
	the GC for painting should come from the pixmap, not from the
	window, to avoid BadMatch problems.  Also, the visual and colormap
	should come from there.  Eliminated the window argument, as it is
	no longer needed.
	I still have a problem, though.  The widget needs to be realized
	to pick its style (for the gc).  So I realize it if it is not
	realized yet --- this will create a toplevel window if the widget
	has not been parented yet, and looks extremely ugly, and doesn't
	work.
	(build_disabled_pixmap): OK, I now use a color context to paint
	the stipple, so realization is not needed.
	(build_disabled_pixmap): Removed unused variable style.

1998-02-26  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.[ch]: made gnome-stock use gnome-pixmap.

Thu Feb 26 18:07:40 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-about.c: Undefine _ when compiling to avoid clash with
	i18n definition.

1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>

        * gnome-stock.[ch]: New tb_scores pixmap for the games.

        * gnome-about.c (gnome_about_new): Now uses a stock button for OK.
	
1998-02-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-app-helper.c (gnome_app_add_radio_toolbar_entries): Use
	the GnomePixmap widget.
	(gnome_app_do_toolbar_creation): Likewise.

1998-02-25  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-app.c (gnome_app_new): Use "" instead of NULL.  Friendler
	to systems where `strlen(NULL)' is broken.

1998-02-24  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-pixmap.c (gnome_pixmap_init): GnomePixmap is a GTK_BASIC
	widget.

1998-02-23  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-pixmap.c (load_file): New internal function that takes
	care of file loading and widget setup.
	(gnome_pixmap_load_file): Changed to use load_file() internally.