@@ -1,3 +1,7 @@
+1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>
+
+        * gnome-scores.c: The scores dialog now uses a stock button for OK.
+
 1998-02-26  Federico Mena Quintero  <federico@nuclecu.unam.mx>
 
 	* gnome-stock.c (build_disabled_pixmap): The style that provides
